@@ -10,10 +10,10 @@
 		Taijin=0;
 		// -->
 	</script>
-	<script type="text/javascript" src="js/head.js?v=1"></script>
-	<script type="text/javascript" src="js/item.js?v=1"></script>
-	<script type="text/javascript" src="js/etc.js?v=1"></script>
-	<script type="text/javascript" src="js/skill.js?v=1"></script>
+	<script type="text/javascript" src="js/head.js?v=2"></script>
+	<script type="text/javascript" src="js/item.js?v=2"></script>
+	<script type="text/javascript" src="js/etc.js?v=2"></script>
+	<script type="text/javascript" src="js/skill.js?v=2"></script>
 	<script type="text/javascript" src="js/libs/base64.js"></script>
 	<script type="text/javascript" src="js/libs/rawinflate.js"></script>
 	<script type="text/javascript" src="js/libs/rawdeflate.js"></script>
@@ -41,6 +41,7 @@
 				<li>Naming functionality for builds</li>
 				<li>Fixed Finger Offensive damage computation</li>
 				<li>Shield Chain now take into consideration race defense bypass</li>
+				<li>Fixed Stone Skin, Anti Magic, Magic Mirror and Keeping skills</li>
 			</ul>
 		</div>
 		<br/>
@@ -1213,9 +1214,9 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="js/monster.js?v=1"></script>
-<script type="text/javascript" src="js/card.js?v=1"></script>
-<script type="text/javascript" src="js/foot.js?v=1"></script>
+<script type="text/javascript" src="js/monster.js?v=2"></script>
+<script type="text/javascript" src="js/card.js?v=2"></script>
+<script type="text/javascript" src="js/foot.js?v=2"></script>
 </form>
 		<script type="text/javascript">
 			function Toogle(x,t){
