@@ -11,10 +11,10 @@
 Lang = 0;
 Taijin=1;
 // --></script>
-<script type="text/javascript" src="js/head.js?v=1"></script>
-<script type="text/javascript" src="js/item.js?v=1"></script>
-<script type="text/javascript" src="js/etc.js?v=1"></script>
-<script type="text/javascript" src="js/skill.js?v=1"></script>
+<script type="text/javascript" src="js/head.js?v=2"></script>
+<script type="text/javascript" src="js/item.js?v=2"></script>
+<script type="text/javascript" src="js/etc.js?v=2"></script>
+<script type="text/javascript" src="js/skill.js?v=2"></script>
 <script type="text/javascript" src="js/libs/base64.js"></script>
 <script type="text/javascript" src="js/libs/rawinflate.js"></script>
 <script type="text/javascript" src="js/libs/rawdeflate.js"></script>
@@ -1155,8 +1155,8 @@ Adjusted to TalonRO by FlynnQ
 </div></div>
 </div>
 <script type="text/javascript" src="js/monster1.js"></script>
-<script type="text/javascript" src="js/card.js?v=1"></script>
-<script type="text/javascript" src="js/foot.js?v=1"></script>
+<script type="text/javascript" src="js/card.js?v=2"></script>
+<script type="text/javascript" src="js/foot.js?v=2"></script>
 </form>
 		<script type="text/javascript">
 		</script>
